--- a/Easy/Reshape the matrix.ipynb
+++ b/Easy/Reshape the matrix.ipynb
@@ -37,7 +37,11 @@
     "\n",
     "# The most straightforward way is to read every element into a queue and dump them to new matrix with desired size.\n",
     "\n",
+    "\n",
     "# Slightly better way.\n",
+    "# Time complexity : O(m*n)O(m∗n)\n",
+    "# Space complexity : O(m*n)O(m∗n)\n",
+    "\n",
     "import numpy as np\n",
     "m = np.array([[2,6],[4,8],[1,5]])\n",
     "\n",
