--- a/Easy/Baseball Game.ipynb
+++ b/Easy/Baseball Game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -53,26 +53,26 @@
       "total_score: -1\n",
       "\n",
       "Received: 9\n",
-      "score: -4\n",
-      "total_score: -1\n",
+      "score: 9\n",
+      "total_score: 8\n",
       "\n",
       "Received: +\n",
-      "score: -6\n",
-      "total_score: -7\n",
+      "score: 5\n",
+      "total_score: 13\n",
       "\n",
       "Received: +\n",
-      "score: -10\n",
-      "total_score: -17\n",
+      "score: 14\n",
+      "total_score: 27\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-17"
+       "27"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
     "            \n",
     "            \n",
     "input_list1 = [5,2,'c','d','+']\n",
-    "input_list2 = [5,-2,4,'C','D','9','+','+']\n",
+    "input_list2 = [5,-2,4,'C','D',9,'+','+']\n",
     "print('test case 1: ')\n",
     "baseBall(input_list1)\n",
     "print('\\ntest case 2: ')\n",
