count binary substring

--- a/Easy/Construct String from Binary Tree.ipynb
+++ b/Easy/Construct String from Binary Tree.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1(2()(4))(3)\n"
+      "1(2()(4))(3)\n",
+      "1(2(4))(3)\n"
      ]
     }
    ],
@@ -69,6 +70,7 @@
     "        ans += '(' + r + ')'\n",
     "    return ans\n",
     "\n",
+    "\n",
     "t1 = BinaryTreeNode(1)    \n",
     "t1.left = BinaryTreeNode(2)\n",
     "t1.right = BinaryTreeNode(3)\n",
@@ -80,7 +82,7 @@
     "t2 = BinaryTreeNode(1)    \n",
     "t2.left = BinaryTreeNode(2)\n",
     "t2.right = BinaryTreeNode(3)\n",
-    "t2.left.right = BinaryTreeNode(4)\n",
+    "t2.left.left = BinaryTreeNode(4)\n",
     "\n",
     "str_t2 = tree2Str(t2)\n",
     "print(str_t2)"
