--- a/Easy/Judge Route Circle.ipynb
+++ b/Easy/Judge Route Circle.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Initially, there is a Robot at position (0, 0). \n",
     "# Given a sequence of its moves, judge if this robot makes a circle, which means it moves back to the original place.\n",
@@ -29,7 +35,9 @@
     "# and num(U) == num(D)\n",
     "\n",
     "def judgeRouteCircle(moves):\n",
-    "    \n"
+    "    return moves.count('L') == moves.count('R') and moves.count('U') == moves.count('D')\n",
+    "\n",
+    "print(judgeRouteCircle('UD'))"
    ]
   }
  ],
