--- a/Easy/Array Partition 1.ipynb
+++ b/Easy/Array Partition 1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "4\n"
      ]
     }
    ],
@@ -24,27 +24,12 @@
     "# Explanation: n is 2, and the maximum sum of pairs is 4 = min(1, 2) + min(3, 4).\n",
     "# We explore a python feature: extended slices\n",
     "\n",
-    "L = range(12)[::3]\n",
-    "print(L[3])\n"
+    "# L = range(12)[::3]\n",
+    "\n",
+    "def arrayPartition1(nums):\n",
+    "    return sum(sorted(nums[::2]))\n",
+    "print(arrayPartition1([1,4,3,2]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
