need to do binary array

--- a/Easy/Intersection of Two Arrays.ipynb
+++ b/Easy/Intersection of Two Arrays.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2}\n"
+     ]
+    }
+   ],
    "source": [
     "# Given two arrays, write a function to compute their intersection.\n",
     "\n",
@@ -24,7 +30,13 @@
     "    \n",
     "    set1 = set(nums1)\n",
     "    set2 = set(nums2)\n",
+    "    intersect = set1&set2\n",
     "    \n",
+    "    return intersect\n",
+    "\n",
+    "nums1 = [1, 2, 2, 3, 1]\n",
+    "nums2 = [2, 2, 1]\n",
+    "print(arrayIntersect(nums1, nums2))\n",
     "    "
    ]
   }
