--- a/Google/Min Stack.ipynb
+++ b/Google/Min Stack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -48,15 +48,15 @@
     "    def top(self):\n",
     "        return self.list[len(self.list)-1]\n",
     "    def getMin(self):\n",
-    "        return \n",
+    "        return self.list_min[len(self.list_min)-1]\n",
     "        \n",
     "minStack = minStack()\n",
     "minStack.push(2)\n",
     "minStack.push(3)\n",
     "minStack.push(-2)\n",
     "minStack.push(-1)\n",
-    "minStack.pop()\n",
-    "print(minStack.top())\n",
+    "\n",
+    "print(minStack.getMin())\n",
     "print(minStack.list_min)"
    ]
   },
