--- a/Uber/Valid Sudoku.ipynb
+++ b/Uber/Valid Sudoku.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
@@ -66,11 +66,12 @@
     "    for k in range(9):\n",
     "        for sub_row in range(int(k/3)*3, int(k/3)*3+3, 1):\n",
     "            for sub_col in range(k%3*3, k%3*3+3, 1):\n",
-    "                if sudoku[row][col] == '.':\n",
+    "                if sudoku[sub_row][sub_col] == '.':\n",
     "                    continue\n",
-    "                if sudoku[row][col] in num_set:\n",
+    "                if sudoku[sub_row][sub_col] in num_set:\n",
     "                    return False\n",
-    "            num_set.add(sudoku[row][col])        \n",
+    "            num_set.add(sudoku[sub_row][sub_col])  \n",
+    "            \n",
     "        num_set.clear()\n",
     "                \n",
     "        \n",
